--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18589,6 +18589,43 @@
 "~^/fiction/[Dd]iamond-[Ee]arr?ing.*$" "/fiction/the-diamond-earrings";
 "~^/[Tt]?h?e?-?[Dd]iamond-?[Ee]ar.*$" "/fiction/the-diamond-earrings";
 "~^/fiction/the-diamond-earring$" "/fiction/the-diamond-earrings";
+"~^/The-Problem-of-Bias$" "/doc/iq/2020-reynolds.pdf";
+"~^/.*/Littlewood$" "/littlewood";
+"~^/doc/reinforcement-learning/model/2018-everitt.pdf\.\/$" "/doc/reinforcement-learning/model/2018-everitt.pdf";
+"~^/doc/refinforcement-learning/preference-learning$" "/doc/reinforcement-learning/preference-learning/mode-collapse/index";
+"~^/static/font/dropcap/ninit/dark/C-66-artdeco.png$" "/static/font/dropcap/ninit/dark/index";
+"~^/rotten.com.html$" "/doc/rotten.com/library/index.html";
+"~^/doc/rotten.com/library/bio/authors/richard-scarry/index.doc$" "/doc/rotten.com/library/bio/authors/richard-scarry/index.html";
+"~^/doc/refinforcement-learning/preference-learning/mode/collapse-index$" "/doc/reinforcement-learning/preference-learning/mode-collapse/index";
+"~^/doc/refinforcement-learning/preference-learning/mode-collapse/index$" "/doc/reinforcement-learning/preference-learning/mode-collapse/index";
+"~^/doc/refinforcement-learning/preference-learning/mode-collapse-index$" "/doc/reinforcement-learning/preference-learning/mode-collapse/index";
+"~^/doc/psychology/writing/www.sciencedirect.com/science/journal/01672681$" "https://www.sciencedirect.com/science/journal/01672681";
+"~^/doc/psychology/writing/1990-%C2%BF$" "/doc/psychology/writing/index";
+"~^/doc/psychology/testing/bias/2020-theproblemofbias\.pdf.*$" "/doc/iq/2020-reynolds.pdf";
+"~^/doc/psychology/personality/psychopathy/1941-cleckley-maskofsanity.pdf\.-.*$" "/doc/psychology/personality/psychopathy/1941-cleckley-maskofsanity.pdf";
+"~^/doc/personal/2011-gwern-yourmorals.org/5f_new2_process.php_files/index$" "/doc/personal/2011-gwern-yourmorals.org/5f_new2_process.html";
+"~^/doc/mq.*$" "/doc/index";
+"~^/doc/longevity/metformin/dx.doi.org/10.1016/j.arr.2017.08.003$" "https://dx.doi.org/10.1016/j.arr.2017.08.003";
+"~^/doc/genetics/heritable/www.pnas.org/cgi/doi/10.1073/pnas.1707009114$" "https://www.pnas.org/cgi/doi/10.1073/pnas.1707009114";
+"~^/doc/genetics/heritable/Journal-logo.*$" "/doc/genetics/heritable/index";
+"~^/doc/genetics/heritable/2021-ludeke-figure3-adopteevsgeneticchildrenschoolexamscoresandpersonality.png$" "/doc/genetics/heritable/adoption/2021-ludeke-figure3-adopteevsgeneticchildrenschoolexamscoresandpersonality.jpg";
+"~^/doc/genetics/heritable/2020-pgc-figure2-gwasprogressovertime.png$" "/doc/genetics/heritable/correlation/2020-pgc-figure2-gwasprogressovertime.jpg";
+"~^/DNB-FAQ-I-.*$" "/dnb-faq";
+"~^/Death-Note-script-moo.*$" "/death-note-script";
+"~^/doc/darknet-market/2013-11-22$" "/doc/darknet-market/silk-road/1/index";
+"~^/doc/economics/1688-delavega-confusionofcon$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/ajapense/2002-gibson$" "/doc/japanese/2002-gibson";
+"~^/doc/2013-schmaal\.pdf.*$" "/doc/modafinil/2013-schmaal.pdf";
+"~^/doc/biol$" "/doc/biology/index";
+"~^/doc/psychology/personality/JyI$" "/doc/psychology/personality/index";
+"~^/doc/radiance/index_split_016.html$" "/doc/radiance/index";
+"~^/doc/predictions/2001principlesforecasting\.pdf.*$" "/doc/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/doc/.*trello.*/2009-arnold-bloggingstatisticsanddemographics.html$" "/doc/technology/2009-arnold-bloggingstatisticsanddemographics.html";
+"~^/Lin$" "/links";
+"~^/doc/biol\?.*$" "/doc/biology/index";
+"~^/static/generateDirectory.o$" "/static/build/generateDirectory.hs";
+"~^/garden-hermit.*$" "https://en.wikipedia.org/wiki/Garden_hermit";
+"~^/ato$" "/atomism";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -19405,11 +19442,10 @@
 "~^/[.!?\\-_][a-zA-Z_]+\.bak$" "/404";
 "~^/[0-9]$" "/404";
 "~^/[0-9]+/.*$" "/404";
-"~^/[0-9]+$" "/404";
-"~^/[0-9]+.7z.*$" "/404";
-"~^/[0-9]+.rar.*$" "/404";
-"~^/[0-9]+.tar.gz.*$" "/404";
-"~^/[0-9]+.zip.*$" "/404";
+"~^/[0-9]+\.7z.*$" "/404";
+"~^/[0-9]+\.rar.*$" "/404";
+"~^/[0-9]+\.tar.gz.*$" "/404";
+"~^/[0-9]+\.zip.*$" "/404";
 "~^/[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+\..*$" "/404";
 "~^/[0-9]+\.[0-9]+em$" "/404";
 "~^/[0-9]+\.php.*$" "/404";
@@ -24591,6 +24627,60 @@
 "~^/.*wp-admin/includes/cloud.*$" "/404";
 "~^/doc/www/artwork/Fanfic_logo.gif.*$" "/404";
 "~^/.*/contentScript.css.*$" "/404";
+"~^//wp-.*php.*$" "/404";
+"~^//data/mark/.*$" "/404";
+"~^/mailman/.*$" "/404";
+"~^/command_port.*$" "/404";
+"~^/xxxmyadmin.*$" "/404";
+"~^/XNoG.*$" "/404";
+"~^/Wikiwipe.*$" "/404";
+"~^/[Ww]eb\..*$" "/404";
+"~^/webphp.*$" "/404";
+"~^/Version.*$" "/404";
+"~^/vendor\..*$" "/404";
+"~^/theme\..*$" "/404";
+"~^/site\..*$" "/404";
+"~^/sites\..*$" "/404";
+"~^/server\..*$" "/404";
+"~^/Pma.*$" "/404";
+"~^/Pj6m.*$" "/404";
+"~^/php.tgz.*$" "/404";
+"~^/phpmy.*$" "/404";
+"~^/PHPMYADMIN.*$" "/404";
+"~^/phpmyadm.*$" "/404";
+"~^/phpldap.*$" "/404";
+"~^/pack\..*$" "/404";
+"~^/new_website.*$" "/404";
+"~^/my\..*$" "/404";
+"~^/mouse\..*wheel.*$" "/404";
+"~^/master.tgz.*$" "/404";
+"~^/__MACOSX.*$" "/404";
+"~^/[Ll]atest\..*$" "/404";
+"~^/includes\..*$" "/404";
+"~^/httpd\..*$" "/404";
+"~^/httpdocs\..*$" "/404";
+"~^/Home_Network_Administration_Protocol.*$" "/404";
+"~^/hd.yallasho.*$" "/404";
+"~^/hdocs\..*$" "/404";
+"~^/gwern\.tgz.*$" "/404";
+"~^/gwernbackup\..*$" "/404";
+"~^/Full\..*$" "/404";
+"~^/fullbackup\..*$" "/404";
+"~^/department\..*$" "/404";
+"~^/Curriculum/.*$" "/404";
+"~^/com\..*$" "/404";
+"~^/company\..*$" "/404";
+"~^/canvas/.*$" "/404";
+"~^/blog.bz.*$" "/404";
+"~^/assest\..*$" "/404";
+"~^/ARCHIVE\..*$" "/404";
+"~^/__adm\..*$" "/404";
+"~^/a\..*$" "/404";
+"~^/aa\..*$" "/404";
+"~^/20[0-9][0-9]\..*$" "/404";
+"~^/123\..*$" "/404";
+"~^/1234\..*$" "/404";
+"~^/123456\..*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
