--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11706,3 +11706,4 @@ default "";
 "~^/static/help\.md$" "/help.md";
 "~^/static/help\.md\.html$" "/help.md\.html";
 "~^/doc/economics/2000-milhaupt.pdf.*$" "/doc/economics/mechanism-design/2000-milhaupt.pdf";
+"~^/doc/ai/nn/transformer/gpt/2023-bommarito-figure2-progressofgpt3overtimeoncpaaccountingexam.png.*$" "/doc/ai/nn/transformer/gpt/2023-bommarito-figure2-progressofgpt3overtimeoncpaaccountingexam.jpg";
