--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16086,7 +16086,7 @@
 "~^/creatiesiteweb.*$" "/404";
 "~^/Copyright\?.*" "/copyright";
 "~^/committee.html/$" "/doc/biology/2000-iapac-norvir/committee.html";
-"~^/aboutidx.html$" "/about";
+"~^/aboutidx.html$" "https://web.archive.org/web/20020127070852/http://www.iapac.org:80/aboutidx.html";
 "~^/complement2$" "/complement";
 "~^/KY,*$" "/index";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-dark-1.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-dark-1.jpg";
@@ -16988,7 +16988,7 @@
 "~^/doc/biology/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
 "~^/doc/biology/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
 "~^/doc/biology/about/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
-"~^/doc/aboutidx.html$" "/doc/biology/2000-iapac-norvir/index";
+"~^/doc/aboutidx.html$" "https://web.archive.org/web/20020127070852/http://www.iapac.org:80/aboutidx.html";
 "~^/7grounds.html$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/7grounds.html";
 "~^/dune-geneticst$" "/dune-genetics";
 "~^/newsletter/2018/14$" "/newsletter/2018/index";
@@ -18626,6 +18626,29 @@
 "~^/static/generateDirectory.o$" "/static/build/generateDirectory.hs";
 "~^/garden-hermit.*$" "https://en.wikipedia.org/wiki/Garden_hermit";
 "~^/ato$" "/atomism";
+"~^/.*/[Ff][Cc][Kk][Ee][Dd][Ii][Tt][Oo][Rr]$" "/404"; # catch all variants of '/fckeditor'
+"~^/.*/core$" "/404";
+"~^/John-Nash-on-.*$" "/doc/cs/cryptography/nash/1955-nash";
+"~^/changelog-rss-feed$" "/changelog";
+"~^/resorter/.*$" "/resorter";
+"~^/404.html\?invite.*$" "/404";
+"~^/07.-OMAKE.*$" "/404";
+"~^/mode-collapse$" "/doc/reinforcement-learning/preference-learning/mode-collapse/index";
+"~^/doc/john-nash/1955-nash$" "/doc/cs/cryptography/nash/1955-nash";
+"~^/doc/biology/preventidx.html$" "https://web.archive.org/web/20020127070852/http://www.iapac.org:80/preventidx.html";
+"~^/doc/biology/confiapac.html$" "https://web.archive.org/web/20020127070852/http://www.iapac.org:80/confiapac.html";
+"~^/doc/biology/confclinical.html$" "https://web.archive.org/web/20020127070852/http://www.iapac.org:80/confclinical.html";
+"~^/doc/biology/confarchive.html$" "https://web.archive.org/web/20020127070852/http://www.iapac.org:80/confarchive.html";
+"~^/doc/biology/2000-iapac-norvir/aboutidx.html$" "https://web.archive.org/web/20020127070852/http://www.iapac.org:80/aboutidx.html";
+"~^/doc/conseq/faqcons1.html$" "/doc/biology/2000-iapac-norvir/conseq/faqcons1.html";
+"~^/doc/biology/about/farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
+"~^/help.html$" "/help";
+"~^/doc/genehcs/2013-gymrek\.pdf.*$" "/doc/genetics/2013-gymrek.pdf";
+"~^/123$" "/index";
+"~^/Nash$" "//doc/cs/cryptography/nash/1955-nash";
+"~^/2019$" "/newsletter/2019/index";
+"~^/2020$" "/newsletter/2020/index";
+"~^/changelog/.rss$" "https://gwern.substack.com/feed";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -24681,6 +24704,27 @@
 "~^/123\..*$" "/404";
 "~^/1234\..*$" "/404";
 "~^/123456\..*$" "/404";
+"~^/.*/bxss\.me.*$" "/404";
+"~^/nginx_status.*$" "/404";
+"~^/.Wikipdia$" "/Wikipedia";
+"~^/\.svn.*$" "/404";
+"~^/.*/package.json.*$" "/404";
+"~^/.*/info.php.*$" "/404";
+"~^/.*/%2e%2e%2f%2e%2e%2f%2e%2e%2fweb.config.*$" "/404";
+"~^/.*/appsettings.json.*$" "/404";
+"~^/.*/swagger.yaml.*$" "/404";
+"~^/.*/swagger.json.*$" "/404";
+"~^/signup.*$" "/404";
+"~^/manifest.json.*$" "/404";
+"~^/jscripts.*$" "/404";
+"~^/.*redirtest\.acx.*$" "/404";
+"~^/.*/passwords.sqlite.*$" "/404";
+"~^/.*/\.bzr/.*$" "/404";
+"~^/.*/package.json.*$" "/404";
+"~^/.*/appsettings.json.*$" "/404";
+"~^/\.hg.*$" "/404";
+"~^/[Gg]uardfile.*$" "/404";
+"~^/.*/test\.php.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
