--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11707,3 +11707,6 @@ default "";
 "~^/static/help\.md\.html$" "/help.md\.html";
 "~^/doc/economics/2000-milhaupt.pdf.*$" "/doc/economics/mechanism-design/2000-milhaupt.pdf";
 "~^/doc/ai/nn/transformer/gpt/2023-bommarito-figure2-progressofgpt3overtimeoncpaaccountingexam.png.*$" "/doc/ai/nn/transformer/gpt/2023-bommarito-figure2-progressofgpt3overtimeoncpaaccountingexam.jpg";
+"~^/doc/cs/2017-denning.pdf.*$" "/doc/cs/hardware/2017-denning.pdf";
+"~^/doc/economics/2015-wilcox.pdf.*$" "/doc/economics/advertising/2015-wilcox.pdf";
+"~^/doc/genetics/heritable/2019-locke.pdf.*$" "/doc/genetics/heritable/rare/2019-locke.pdf";
