--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18649,6 +18649,26 @@
 "~^/2019$" "/newsletter/2019/index";
 "~^/2020$" "/newsletter/2020/index";
 "~^/changelog/.rss$" "https://gwern.substack.com/feed";
+"~^/doc/ai/milestones/.*$" "/static/404";
+"~^/assets_v2/images/.*$" "/static/404";
+"~^/doc/personal/current_events_process.html$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.html";
+"~^/mek.*$" "/me";
+"~^/doc/technology/2018-07-f0.*$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/doc/sociology/2014-HIT.*$" "/doc/sociology/index";
+"~^/doc/reinforcement-learning/imperfect-information/diplomacy/2018-dejonge$" "/doc/reinforcement-learning/imperfect-information/diplomacy/2018-dejonge.pdf";
+"~^/doc/psychology/okcupid/the4bigmyofprofilepictures.html$" "/doc/psychology/okcupid/the4bigmythsofprofilepictures.html";
+"~^/doc/psychology/1991-anglin$" "/doc/psychology/1991-anglin-instructionaltechnology.pdf";
+"~^/doc/personal/xrisks/1985-hofstadter$" "/doc/existential-risk/1985-hofstadter";
+"~^/doc/cs/2001-12-02-treginaldgibbons-isyoursonahacker.html$" "/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/doc/2011-gwern-yourmorals.org/stories_process.php_files/$" "/doc/personal/2011-gwern-yourmorals.org/stories_process.html";
+"~^/doc/cs/2001-12$" "/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/doc/darknet-market/2013-07-09-germanarrests.html$" "/doc/darknet-markets/2013-07-09-germanarrests.html.maff";
+"~^/doc/ig/2018-warne.P-df$" "/doc/iq/2018-warne.pdf";
+"~^/doc/2006-guillem\.pdf.*$" "/doc/nicotine/2006-guillem.pdf";
+"~^/doc/reinforcement-l$" "/doc/reinforcement-learning/index";
+"~^/doc/spacedrepetition/2006-son\.pdf.*$" "/doc/psychology/spaced-repetition/2012-son.pdf";
+"~^/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-345\.pdf.*$" "/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-1.pdf";
+"~^/The-%C2%BF$" "/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -24725,6 +24745,28 @@
 "~^/\.hg.*$" "/404";
 "~^/[Gg]uardfile.*$" "/404";
 "~^/.*/test\.php.*$" "/404";
+"~^/\$2013$" "/static/404";
+"~^//\(options$" "/static/404";
+"~^/invalid-page-.*$" "/static/440";
+"~^/taupi.org/.*$" "/static/440";
+"~^/splay-shoes.*$" "/static/440";
+"~^/.*/getting-started-with-stripe-through-a-third-party-platfor.*$" "/static/440";
+"~^/.*\$2013$" "/404";
+"~^/.*\$1994$" "/404";
+"~^/.*\$2018$" "/404";
+"~^/.*\$1962$" "/404";
+"~^/.*\$1950$" "/404";
+"~^/404.html\?.*$" "/404";
+"~^/.*get_chats.php.*$" "/404";
+"~^/Credit-Cards/.*$" "/404";
+"~^/1975\.[Pp][Hh][Pp].*$" "/404";
+"~^/special/.*$" "/404";
+"~^/sbobetkick.*$" "/404";
+"~^/ross-trufas.*$" "/404";
+"~^/Questfinance.*$" "/404";
+"~^/.*/\?wptouch_switch.*$" "/404";
+"~^/expand\.gif.*$" "/404";
+"~^/client_secrets.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
