--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11710,3 +11710,7 @@ default "";
 "~^/doc/cs/2017-denning.pdf.*$" "/doc/cs/hardware/2017-denning.pdf";
 "~^/doc/economics/2015-wilcox.pdf.*$" "/doc/economics/advertising/2015-wilcox.pdf";
 "~^/doc/genetics/heritable/2019-locke.pdf.*$" "/doc/genetics/heritable/rare/2019-locke.pdf";
+"~^/doc/economics/2002-temin-figure2-thepriceofwoolinbabylonia417to72bc.png.*$" "/doc/economics/2002-temin-figure2-thepriceofwoolinbabylonia417to72bc.jpg";
+"~^/doc/economics/2002-temin-figure1-thepriceofbarleyinbabylonia417to72bc.png.*$" "/doc/economics/2002-temin-figure1-thepriceofbarleyinbabylonia417to72bc.jpg";
+"~^/doc/cs/lisp/1988-walker.pdf.*$" "/doc/cs/lisp/emacs/1988-walker.pdf";
+"~^/doc/genetics/heritable/correlation/2018-pingault.pdf.*$" "/doc/genetics/heritable/correlation/mendelian-randomization/2018-pingault.pdf";
