--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18669,6 +18669,34 @@
 "~^/doc/spacedrepetition/2006-son\.pdf.*$" "/doc/psychology/spaced-repetition/2012-son.pdf";
 "~^/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-345\.pdf.*$" "/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-1.pdf";
 "~^/The-%C2%BF$" "/index";
+"~^/static/font/ssp/sourcesanspro-basic-regular.ttf$" "/static/font/ssp/SourceSansPro-BASIC-Regular.ttf";
+"~^/.../weexperimentonhumanbeings.html\?.*$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/static/template/postitem.html$" "/static/template/index";
+"~^/static/img/scrollbar/scrollbar-thumb.gif$" "/static/img/scrollbar/index";
+"~^/.../okcupid/yourlooksandyourinbox.html\?.*$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
+"~^/.*/Catnip-survey$" "/catnip-survey";
+"~^/doc/technology/rss.xml$" "https://gwern.substack.com/feed";
+"~^/doc/statistics/1972-savage-foundationsofstatistics.djvu.*$" "/doc/statistics/decision/1972-savage-foundationsofstatistics.pdf";
+"~^/doc/personal/Nar.*$" "/doc/personal/index";
+"~^/doc/math/part0020.html$" "/doc/math/index";
+"~^/doc/longevity/glp/psychology/www.sciencedirect.com/science/journal/01497634$" "https://www.sciencedirect.com/science/journal/01497634";
+"~^/doc/genetics/selection/natural/human/dysgenics/www.sciencedirect.com/science/journal/10905138$" "https://www.sciencedirect.com/science/journal/10905138";
+"~^/doc/fiction/2004-anon-greeneggsandhamabstract\.pdf.*$" "/doc/fiction/index";
+"~^/doc/%C3%83%E2%80.*$" "/doc/index";
+"~^/doc/bitcoin/nashx/2013-F.*$" "/doc/bitcoin/nashx/2013-nashx-howitworks.html";
+"~^/doc/biology/advocacy.htmlno-T.*$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/blocked.png$" "/404.html";
+"~^/doc/ai/nn/transformer/gpt/4/humor/index$" "/doc/ai/nn/transformer/gpt/3/humor/index";
+"~^/doc/cs/linkrot/cs/linkrot/2007-craig\.pdf.*$" "/doc/cs/linkrot/2007-craig.pdf";
+"~^/doc/fiction/humor/dinosaur-comics/gwern-x-x-y\\=1.png$" "/doc/fiction/humor/dinosaur-comics/gwern-xminusxminusyequals1.png";
+"~^/doc/psychology\.pdf.*$" "/doc/psychology/index";
+"~^/.../weexperimentonhumanbeings.html$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/doc/statistics/decisi$" "/doc/statistics/decision/index";
+"~^/haskell/1$" "/haskell/index";
+"~^/otalu$" "/otaku";
+"~^/matt$" "/matt-levine";
+"~^/doc/iq/ses/2007-zagorsky/favicon.ico$" "/static/img/favicon.ico";
+"~^/zeo/Vitamin-D/$" "/zeo/vitamin-d";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -24767,6 +24795,25 @@
 "~^/.*/\?wptouch_switch.*$" "/404";
 "~^/expand\.gif.*$" "/404";
 "~^/client_secrets.*$" "/404";
+"~^/\.github-ci.*$" "/404";
+"~^/wiki-zine\..*$" "/404";
+"~^/sbobetsia.*$" "/404";
+"~^/safeview.*$" "/404";
+"~^/ph-jiliclub.*$" "/404";
+"~^/.*/phpcms/.*$" "/404";
+"~^/.*/formguide/.*$" "/404";
+"~^/jili.*$" "/404";
+"~^/ipfs/.*$" "/404";
+"~^/idiogw.*$" "/404";
+"~^/hilo7.*$" "/404";
+"~^/fun8.*$" "/404";
+"~^/FD126C.*$" "/404";
+"~^/duckbet.*$" "/404";
+"~^/Cosmic_Live.*$" "/404";
+"~^/blocked.png.*$" "/404";
+"~^/betflik.*$" "/404";
+"~^/90jili.*$" "/404";
+"~^/.*jili-.*.online$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
