--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18696,7 +18696,71 @@
 "~^/otalu$" "/otaku";
 "~^/matt$" "/matt-levine";
 "~^/doc/iq/ses/2007-zagorsky/favicon.ico$" "/static/img/favicon.ico";
-"~^/zeo/Vitamin-D/$" "/zeo/vitamin-d";
+"~^/[Zz]eo/[Vv]itamin-D/$" "/zeo/vitamin-d";
+"~^/danbooru2021/.*$" "/danbooru2021";
+"~^/longevityabout.*$" "/longevity";
+"~^/forms/emaillist.html$" "https://gwern.substack.com/";
+"~^/continual-learning$" "/doc/reinforcement-learning/meta-learning/continual-learning/index";
+"~^/advocacy2000.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/advocacy2000.html";
+"~^/VARIABLES.zip$" "/variables";
+"~^/static/img/logo/logo-whitebg-large-border.png,2024.*$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/on-overcoming-bias$" "/static/404";
+"~^/fiction/The-Ones-Who-Walk-Towar$" "/fiction/acre";
+"~^/doc/www/youtu.be/REzxxk8pi-g$" "https://youtu.be/REzxxk8pi-g";
+"~^/.*/www.elsevier.com/locate/neutera$" "https://www.elsevier.com/locate/neutera";
+"~^/doc/reinforcement-learning/...fullaccounts\.pdf.*$" "/doc/reinforcement-learning/deepmind/index";
+"~^/doc/reinforcement-learning/exploration/continual-learning$" "/doc/reinforcement-learning/meta-learning/continual-learning/index";
+"~^/doc/reinforcement-learning/continual-learning$" "/doc/reinforcement-learning/meta-learning/continual-learning/index";
+"~^/.*/www.sciencedirect.com/science/journal/01918869$" "";
+"~^/doc/psychology/nature/2010-peen.pdfp.*$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/.*/www.sciencedirect.com/science/journal/03788741$" "https://www.sciencedirect.com/science/journal/03788741";
+"~^/.*/www.nature.com/npp$" "https://www.nature.com/npp";
+"~^/.*/www.elsevier.com/locate/jep$" "https://www.elsevier.com/locate/jep";
+"~^/doc/melatonin/www.eckerberg.se/pilotstudy$" "https://www.eckerberg.se/pilotstudy";
+"~^/doc/longevity/fasting/ClinicalTrials.gov$" "https://ClinicalTrials.gov/";
+"~^/doc/logo-nobg-big.png/$" "/static/img/logo/logo-nobg-big.png";
+"~^/doc/iq/2017-%C3%AF%C2%AC%E2%80%9Aynn\.pdf.*$" "/doc/iq/2017-flynn.pdf";
+"~^/.*/www.nature.com/npp$" "https://www.nature.com/npp";
+"~^/.*/www.wileyonlinelibrary.com/journal/bioe$" "https://www.wileyonlinelibrary.com/";
+"~^/doc/gan/thiswaifudoesnotexist-100samples.jpg$" "/doc/ai/nn/gan/stylegan/anime/gwern-thiswaifudoesnotexist-100samples.jpg";
+"~^/doc/economics...confusions\.pdf.*$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/darknet-market/evolution/2024-shan\.pdf.*$" "/doc/darknet-market/evolution/index";
+"~^/doc/darknet-market/agora/2014-12-OE.*$" "/doc/darknet-market/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/doc/cs/algorithm/2019-hsu-3.\.pdf.*$" "/doc/cs/algorithm/2019-hsu-3.pdf";
+"~^/doc/biology/Hk.*$" "/doc/biology/index";
+"~^/doc/ai/nn/transformer/fiction/$" "/doc/ai/nn/transformer/gpt/fiction/";
+"~^/BLOG$" "/index";
+"~^/doc/2012-hayworth\.pdf.*$" "/doc/ai/2012-hayworth.pdf";
+"~^/board.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/about/board.html";
+"~^/doc/sr/pickard$" "/doc/darknet-markets/pickard/index";
+"~^/note/Copyright-deadweight/$" "/doc/economics/copyright/index";
+"~^/doc/iq/ml$" "/doc/iq/index";
+"~^/doc/math/part0018.html$" "/doc/math/index";
+"~^/doc/math/part0014.html$" "/doc/math/index";
+"~^/doc/math/part0013.html$" "/doc/math/index";
+"~^/doc/math/part0012.html$" "/doc/math/index";
+"~^/doc/math/part0011.html$" "/doc/math/index";
+"~^/doc/math/part0010.html$" "/doc/math/index";
+"~^/doc/math/part0008.html$" "/doc/math/index";
+"~^/doc/math/part0007.html$" "/doc/math/index";
+"~^/doc/math/part0006.html$" "/doc/math/index";
+"~^/doc/math/part0005.html$" "/doc/math/index";
+"~^/doc/2011-taylor\.pdf.*$" "/doc/psychology/nature/2011-taylor.pdf";
+"~^/doc/psychology/okcupid/%C3%82%C2%BF$" "/doc/psychology/okcupid/index";
+"~^/doc/psychology/okcupid/raceandattraction20092014.h$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/doc/psychology/1996-murphyindividualdifferencesandbehaviorinorganizations\.pdf.*$" "/doc/psychology/personality/1996-murphy-individualdifferencesandbehaviorinorganizations.pdf";
+"~^/doc/radiance/index_split_028.html$" "/doc/radiance/index";
+"~^/doc/rotten.com/li$" "/doc/rotten.com/library/index.html";
+"~^/doc/science/1986-hamming///$" "/doc/science/1986-hamming";
+"~^/doc/statistics/1994-falk/$" "/doc/statistics/bayes/1994-falk";
+"~^/doc/statistics/m$" "/doc/statistics/index";
+"~^/doc/technology/2014-12-%C3%B0$" "/doc/technology/2014-12-14-gwern-linuxadjustmenthearingloss.html";
+"~^/doc/psychology/music/distraction/2013-li\.pdf.*$" "/doc/psychology/music/distraction/index";
+"~^/static/generateSimilar.hs$" "/static/build/generateSimilar.hs";
+"~^/markdown-lint.sh/$" "/static/build/markdown-lint.sh";
+"~^/favicon.jpg$" "/static/img/favicon.png";
+"~^/doc/logo-whitebg.png/$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/[Vv]ariables.zip$" "/variables";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -24814,6 +24878,99 @@
 "~^/betflik.*$" "/404";
 "~^/90jili.*$" "/404";
 "~^/.*jili-.*.online$" "/404";
+"~^/.%E6%8F%90%E5%.*$" "/404";
+"~^/.*/New_folder.*$" "/404";
+"~^/.*hotkarachigirls.*$" "/404";
+"~^/.*hydrocodone-prescription/.*$" "/404";
+"~^///wp-2019.*$" "/404";
+"~^//ccx/.*$" "/404";
+"~^//gawean.*$" "/404";
+"~^//worm0.*$" "/404";
+"~^//xBrain.*$" "/404";
+"~^//xl2023.*$" "/404";
+"~^/0x.zip.*$" "/404";
+"~^/2009$" "/404";
+"~^/2010$" "/404";
+"~^/2012$" "/404";
+"~^/2013$" "/404";
+"~^/2014$" "/404";
+"~^/2015$" "/404";
+"~^/2016$" "/404";
+"~^/2017$" "/404";
+"~^/2018$" "/404";
+"~^/983.*$" "/404";
+"~^/JAVA.zip.*$" "/404";
+"~^/JSP.zip.*$" "/404";
+"~^/Java.zip.*$" "/404";
+"~^/Jsp.zip.*$" "/404";
+"~^/Main/exit\?.*$" "/404";
+"~^/Neuer_Ordner.*$" "/404";
+"~^/Recycle.Bin.*$" "/404";
+"~^/Release.zip.*$" "/404";
+"~^/Trash.zip.*$" "/404";
+"~^/V1.zip.*$" "/404";
+"~^/V2.zip.*$" "/404";
+"~^/V3.zip.*$" "/404";
+"~^/V4.zip.*$" "/404";
+"~^/alfanew.*$" "/404";
+"~^/away.*$" "/404";
+"~^/bounce\?.*$" "/404";
+"~^/class_appfun.*$" "/404";
+"~^/click\?.*$" "/404";
+"~^/clickout\?.*$" "/404";
+"~^/clickthrough\?.*$" "/404";
+"~^/deref.*$" "/404";
+"~^/dev2local.*$" "/404";
+"~^/doc/cloud.*$" "/404";
+"~^/doc/log1.png.*$" "/404";
+"~^/doc/pc/logo.png.*$" "/404";
+"~^/exit\?.*$" "/404";
+"~^/exitlink.*$" "/404";
+"~^/external-link\?.*$" "/404";
+"~^/external\?.*$" "/404";
+"~^/forms/emaillist.html.*$" "/404";
+"~^/fwc.*$" "/404";
+"~^/fzh.*$" "/404";
+"~^/go\?.*$" "/404";
+"~^/imgs/logox.png.*$" "/404";
+"~^/ironblow.*$" "/404";
+"~^/jump\?.*$" "/404";
+"~^/kofc1.*$" "/404";
+"~^/leave\?.*$" "/404";
+"~^/leaving\?.*$" "/404";
+"~^/linkout\?.*$" "/404";
+"~^/links\?.*$" "/404";
+"~^/offsite\?.*$" "/404";
+"~^/outgoing\?.*$" "/404";
+"~^/p2p.zip.*$" "/404";
+"~^/push.tx.*$" "/404";
+"~^/query\?.*$" "/404";
+"~^/r\?.*$" "/404";
+"~^/sad/about.php.*$" "/404";
+"~^/secrets.json.*$" "/404";
+"~^/sendTransaction.*$" "/404";
+"~^/shell_lock.*$" "/404";
+"~^/social\?.*$" "/404";
+"~^/staff.html.*$" "/404";
+"~^/static/1234.php.*$" "/404";
+"~^/static/a.php.*$" "/404";
+"~^/static/admins.php.*$" "/404";
+"~^/static/ak.php.*$" "/404";
+"~^/static/dama.php.*$" "/404";
+"~^/static/dd.php.*$" "/404";
+"~^/static/image/logo2.png.*$" "/404";
+"~^/static/newfile.*$" "/404";
+"~^/static/picture/logo_jg2.png.*$" "/404";
+"~^/styles.*$" "/404";
+"~^/theaestheticsfirm.com.*$" "/404";
+"~^/track\?.*$" "/404";
+"~^/track_link\?.*$" "/404";
+"~^/tracker\?.*$" "/404";
+"~^/v3.zip.*$" "/404";
+"~^/visit\?.*$" "/404";
+"~^/website.html.*$" "/404";
+"~^/what.html.*$" "/404";
+"~^/xoomer.alice.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
