--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11714,3 +11714,7 @@ default "";
 "~^/doc/economics/2002-temin-figure1-thepriceofbarleyinbabylonia417to72bc.png.*$" "/doc/economics/2002-temin-figure1-thepriceofbarleyinbabylonia417to72bc.jpg";
 "~^/doc/cs/lisp/1988-walker.pdf.*$" "/doc/cs/lisp/emacs/1988-walker.pdf";
 "~^/doc/genetics/heritable/correlation/2018-pingault.pdf.*$" "/doc/genetics/heritable/correlation/mendelian-randomization/2018-pingault.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-spider-samples.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-spider-samples.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-25-gwern-midjourneyv6-halloween-glogo-dracula-samples.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-25-gwern-midjourneyv6-halloween-glogo-dracula-samples.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-26-gwern-midjourneyv6-halloween-glogo-blackcat-samples.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-26-gwern-midjourneyv6-halloween-glogo-blackcat-samples.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-pumpkins-samples-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-pumpkins-samples-2.jpg";
