--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18711,7 +18711,7 @@
 "~^/doc/reinforcement-learning/...fullaccounts\.pdf.*$" "/doc/reinforcement-learning/deepmind/index";
 "~^/doc/reinforcement-learning/exploration/continual-learning$" "/doc/reinforcement-learning/meta-learning/continual-learning/index";
 "~^/doc/reinforcement-learning/continual-learning$" "/doc/reinforcement-learning/meta-learning/continual-learning/index";
-"~^/.*/www.sciencedirect.com/science/journal/01918869$" "";
+"~^/.*/www.sciencedirect.com/science/journal/01918869$" "https://www.sciencedirect.com/science/journal/01918869";
 "~^/doc/psychology/nature/2010-peen.pdfp.*$" "/doc/psychology/nature/2010-peen.pdf";
 "~^/.*/www.sciencedirect.com/science/journal/03788741$" "https://www.sciencedirect.com/science/journal/03788741";
 "~^/.*/www.nature.com/npp$" "https://www.nature.com/npp";
@@ -18761,6 +18761,8 @@
 "~^/favicon.jpg$" "/static/img/favicon.png";
 "~^/doc/logo-whitebg.png/$" "/static/img/logo/logo-whitebg-large-border.png";
 "~^/[Vv]ariables.zip$" "/variables";
+"~^/[Uu]nsortin.*$" "/unsort";
+"~^/[Uu]n-sort.*$" "/unsort";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
