--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9355,7 +9355,6 @@
 "~^/static/transclude\?.*$" "/static/transclude.js";
 "~^/static/typography\?.*$" "/static/typography.js";
 "~^/doc/[a-km-z].*/Statistical-notes.*$" "/statistical-notes";
-"~^/acne$" "/statistical-notes#acne-a-good-quantified-self-topic";
 "~^/statistical-notes.page$" "/statistical-notes.md";
 "~^/doc/statistics/Charity-is-not-about-helping$" "/charity-is-not-about-helping";
 "~^/br$" "/statoc/404.html";
@@ -18763,6 +18762,44 @@
 "~^/[Vv]ariables.zip$" "/variables";
 "~^/[Uu]nsortin.*$" "/unsort";
 "~^/[Uu]n-sort.*$" "/unsort";
+"~^/static/js/utility%EF%B9%96v=1.*.js$" "/static/js/utility.js";
+"~^/static/js/popups%EF%B9%96v=1.*.js$" "/static/js/popups.js";
+"~^/static/js/popins%EF%B9%96v=1.*.js$" "/static/js/popins.js";
+"~^/static/js/extracts%EF%B9%96v=1.*.js$" "/static/js/extracts.js";
+"~^/static/img/help.php$" "/static/img/";
+"~^/static/css/links%EF%B9%96v=1.*.css$" "/static/css/links.css";
+"~^/static/css/fonts%EF%B9%96v=1.*.css$" "/static/css/fonts.css";
+"~^/static/css/default%EF%B9%96v=1.*.css$" "/static/css/default.css";
+"~^/static/build/foo.jpg$" "/static/build/";
+"~^/matt-levine-.h.*$" "/matt-levine";
+"~^/icon.svg.*$" "/static/img/icon/icons.svg";
+"~^/feedback/.*$" "/index#footer-anonymous-feedback";
+"~^/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronyms-processeddata.csv.xz.html$" "/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronyms-processeddata.csv.xz";
+"~^/doc/statistics/causality/2015-%EF%BF%BD.*$" "/doc/statistics/causality/index";
+"~^/doc/statistics/bayes/%C3%B0.*$" "/doc/statistics/bayes/index";
+"~^/doc/psychology/writing/1985-parisreview-johnbarthinterview.html$" "https://www.theparisreview.org/interviews/2910/the-art-of-fiction-no-86-john-barth";
+"~^/doc/psychology/2019-01-%C3.*$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/iq/generic.html$" "/doc/iq/index";
+"~^/doc/cs/security/-TerenceTao27/posts/8vmpA9fgRMq$" "https://plus.google.com/114134834346472219368/posts/8vmpA9fgRMq";
+"~^/doc/bitcoin/110295650700104208522/posts/FiLnEia46qM$" "https://plus.google.com/110295650700104208522/posts/FiLnEia46qM";
+"~^/doc/audiology/2018-jin-environmentalingredients\.pdf.*$" "/static/404";
+"~^/doc/anime/eva/2011-studiokhara-hideakiannopersonalbiography.doc$" "/doc/anime/eva/2011-studiokhara-hideakiannopersonalbiography.html";
+"~^/dnr/.*$" "/static/404";
+"~^/doc/anime/eva/1996-newtype-anno$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/biology/about/abt_dintruff.html$" "/doc/biology/2000-iapac-norvir/abt_dintruff.html";
+"~^/doc/biology/about/abt_lichter.html$" "/doc/biology/2000-iapac-norvir/abt_lichter.html";
+"~^/doc/biology/tolerability/portability/farthingport.html$" "/doc/biology/2000-iapac-norvir/portability/farthingport.html";
+"~^/doc/biology/about/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/doc/biology/about/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/doc/biology/about/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/doc/biology/about/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/doc/biology/about/urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/doc/biology/about/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/sr/2019/04/22/deepdotweb-dnmlist$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/2014-sariaslan-1$" "/doc/genetics/2014-sariaslan-1.pdf";
+"~^/doc/psychology/loftus/1974-loftus\.pdf.*$" "/doc/psychology/cognitive-bias/1974-loftus.pdf";
+"~^/doc/g3.php$" "/doc/index";
+"~^/fee$" "/index#footer-anonymous-feedback";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
