LI: +~20 more color; enforce lower-case hexadecimal format for consistency

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11718,3 +11718,4 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-25-gwern-midjourneyv6-halloween-glogo-dracula-samples.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-25-gwern-midjourneyv6-halloween-glogo-dracula-samples.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-26-gwern-midjourneyv6-halloween-glogo-blackcat-samples.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-26-gwern-midjourneyv6-halloween-glogo-blackcat-samples.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-pumpkins-samples-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-pumpkins-samples-2.jpg";
+"~^/doc/psychology/2016-olson.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/2016-olson.pdf";
