--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11719,3 +11719,18 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-26-gwern-midjourneyv6-halloween-glogo-blackcat-samples.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-26-gwern-midjourneyv6-halloween-glogo-blackcat-samples.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-pumpkins-samples-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2024-10-28-gwern-midjourneyv6-halloween-glogo-pumpkins-samples-2.jpg";
 "~^/doc/psychology/2016-olson.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/2016-olson.pdf";
+"~^/doc/economics/advertising/2017-sinha-figure3-peruserantiadblockeffects.png.*$" "/doc/economics/advertising/adblock/2017-sinha-figure3-peruserantiadblockeffects.png";
+"~^/doc/economics/advertising/2018-04-10-tavan-isadblockingtenpercenthigherthancommonlymeasured.html.*$" "/doc/economics/advertising/adblock/2018-04-10-tavan-isadblockingtenpercenthigherthancommonlymeasured.html";
+"~^/doc/economics/advertising/2018-miroglio-figure3table5-adblockerbrowseruse.png.*$" "/doc/economics/advertising/adblock/2018-miroglio-figure3table5-adblockerbrowseruse.png";
+"~^/doc/economics/advertising/2019-03-18-googlesurveys-adblocker.csv.*$" "/doc/economics/advertising/adblock/2019-03-18-googlesurveys-adblocker.csv";
+"~^/doc/economics/advertising/2019-03-18-gwern-googlesurveys-adblock-awarenessusage.png.*$" "/doc/economics/advertising/adblock/2019-03-18-gwern-googlesurveys-adblock-awarenessusage.png";
+"~^/doc/economics/advertising/2019-03-21-googlesurveys-adblocknonusagereasons.csv.*$" "/doc/economics/advertising/adblock/2019-03-21-googlesurveys-adblocknonusagereasons.csv";
+"~^/doc/economics/advertising/2019-03-21-gwern-googlesurveys-adblock-nonusagereasons.png.*$" "/doc/economics/advertising/adblock/2019-03-21-gwern-googlesurveys-adblock-nonusagereasons.png";
+"~^/doc/economics/advertising/2019-03-23-googlesurveys-adblocknonusagereasons-2.csv.*$" "/doc/economics/advertising/adblock/2019-03-23-googlesurveys-adblocknonusagereasons-2.csv";
+"~^/doc/economics/advertising/2019-03-23-gwern-googlesurveys-adblock-nonusagereasons-2.png.*$" "/doc/economics/advertising/adblock/2019-03-23-gwern-googlesurveys-adblock-nonusagereasons-2.png";
+"~^/doc/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons-3.csv.*$" "/doc/economics/advertising/adblock/2019-03-27-googlesurveys-adblocknonusagereasons-3.csv";
+"~^/doc/economics/advertising/2019-04-07-googlesurveys-adblocker-2.csv.*$" "/doc/economics/advertising/adblock/2019-04-07-googlesurveys-adblocker-2.csv";
+"~^/doc/economics/advertising/2024-03-20-gwern-gwernnet-adblockpsafooter.png.*$" "/doc/economics/advertising/adblock/2024-03-20-gwern-gwernnet-adblockpsafooter.png";
+"~^/doc/economics/advertising/2017-pagefair.pdf.*$" "/doc/economics/advertising/adblock/2017-pagefair.pdf";
+"~^/doc/economics/advertising/2021-gritckevich.pdf.*$" "/doc/economics/advertising/adblock/2021-gritckevich.pdf";
+"~^/doc/economics/advertising/2024-degregorio.pdf.*$" "/doc/economics/advertising/adblock/2024-degregorio.pdf";
